modified prod properties to test refreshing

--- a/config-client-production.properties
+++ b/config-client-production.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is from config server - Production environment.
+msg = Hello world - this is from config server updated the file - Production environment.
