trying refresh without restarting server

--- a/config-client-production.properties
+++ b/config-client-production.properties
@@ -1,1 +1,1 @@
-test.msg = Hello world - this is from config server updated the file - Production environment.
+test.msg = Hello world - this is from config server updated the file without restarting - Production environment.
