--- a/config-client-production.properties
+++ b/config-client-production.properties
@@ -1,1 +1,5 @@
 test.msg = Hello world - this is from config server updated the file without restarting - Production environment.
+
+spring.cloud.config.allowOverride = true
+spring.cloud.config.overrideNone = true
+spring.cloud.config.overrideSystemProperties = true
