--- a/config-client.properties
+++ b/config-client.properties
@@ -1,1 +1,5 @@
 test.msg = Hello world - this is from config server.
+
+spring.cloud.config.allowOverride = true
+spring.cloud.config.overrideNone = true
+spring.cloud.config.overrideSystemProperties = true
